# mech

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  LICENSE_MIT  README.md  RELEASE-CHECKLIST.mec  ROADMAP.md  ROADMAP.mec  build.rs  celldisp2.m  client.mec  ekf.mec  executionTest.m  extract_peg.awk  file.txt  findMemoryIndex.m  foo.m  formTokens.m  fulltest.mek  generationTest.m  grammar.awk  grammar.md  grammar.txt  huge.mec  index.html  index.mec  initializePE.m  input.mek  insertTree.m  lexerTest.m  match.mec  organizeTree.m  parseTree.m  parser2.m  parserTest.m  promoteNode.m  pruneTree.m  (+11 more)
hosts/browser/: Cargo.toml  host.mcfg  module.mcfg
hosts/browser/docs/: clipboard.mec  config.mec  delegation.mec  dom.mec  examples.mec  host-config-injection.mec  index.mec  manifest.mec  network.mec  storage.mec  wasm-api.mec  wasm.mec
hosts/browser/src/: config.rs  delegation.rs  host_factories.rs  lib.rs  module.rs  provider.rs
hosts/browser/tests/: module_manifest.rs  provider_compat.rs
hosts/cli/: Cargo.toml  host.mcfg  module.mcfg
hosts/cli/docs/: capabilities.mec  config.mec  env.mec  examples.mec  grants.mec  index.mec  manifest.mec  stdout-stderr.mec
hosts/cli/src/: lib.rs  module.rs  provider.rs
hosts/cli/tests/: module_manifest.rs  provider.rs
hosts/console/: Cargo.toml  host.mcfg
hosts/console/src/: browser.rs  lib.rs  module.rs  native.rs  provider.rs
hosts/console/tests/: provider.rs
hosts/robot-arm/: Cargo.toml  host.mcfg
hosts/robot-arm/docs/: commands.mec  examples.mec  index.mec  manifest.mec  state.mec
hosts/robot-arm/examples/: README.md
hosts/robot-arm/examples/browser-robot-arm-demo/: demo.js  demo.mcfg
hosts/robot-arm/examples/robot-arm-demo/: demo.mcfg  demo.mec
hosts/robot-arm/src/: lib.rs  module.rs  provider.rs
hosts/scene/: Cargo.toml  host.mcfg
hosts/scene/src/: browser.rs  config.rs  lib.rs  module.rs  native.rs  provider.rs  schema.rs
hosts/scene/tests/: provider.rs
hosts/time/: Cargo.toml  host.mcfg
hosts/time/src/: browser.rs  config.rs  lib.rs  manual.rs  module.rs  native.rs  provider.rs  snapshot.rs
machines/string/: Cargo.toml  LICENSE  index.mec
machines/string/src/: concat.rs  join.rs  length.rs  lib.rs  split.rs
machines/string/tests/: string.mec
mech-app/src-tauri/: Cargo.toml  tauri.conf.json
mech-app/src-tauri/src/: main.rs
modules/math-dylib/: Cargo.toml
modules/math-dylib/src/: lib.rs
notebook/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  wstest.html
notebook/editor/: editor.mec
notebook/src/: icon.rs  lib.rs
notebook2/: Cargo.toml  build.rs
notebook2/src/: lib.rs  main.rs
src/compiler/: Cargo.toml  README.md  mod.rs  simd.rs
src/compiler/src/: constants.rs  context.rs  lib.rs  program.rs  sections.rs
src/core/: Cargo.toml  README.md
src/core/benches/: balls.rs.old
src/core/src/: block.rs  browser.rs  capabilities.rs  column.rs  compiler.rs  core.rs  database.rs  enums.rs  error.rs  functions.rs  interpreter.rs  kind.rs  lib.rs  matrix.rs  mika.rs  module_manifest.rs  nodes.rs  plan.rs  schedule.rs  statemachines.rs  stdlib.rs  structures.rs  table.rs  transformation.rs  types.rs  value.rs
src/core/src/compiler/: mod.rs  program.rs
src/core/src/function/: compare.rs  logic.rs  math.rs  math_update.rs  matrix.rs  mod.rs  set.rs  table.rs
src/core/src/old/: block.rs  capabilities.rs  column.rs  core.rs  database.rs  user_functions.rs
src/core/src/program/: compiler.rs  mod.rs  program.rs  symbol_table.rs
src/core/src/stdlib/: compare.rs  mod.rs  (+6 more)
src/interpreter/: Cargo.toml  README.md
src/interpreter/src/: activation.rs  builtins.rs  bytecode_interpreter.rs  compiler.rs  expressions.rs  frame.rs  functions.rs  interpreter.rs  lib.rs  literals.rs  mechdown.rs  modules.rs  patterns.rs  state_machines.rs  statements.rs  structures.rs  tracing.rs
src/interpreter/tests/: context_bindings.rs
src/machines/html/: Cargo.toml  index.mec
src/machines/http/: Cargo.toml  README.md  index.mec
src/program/: Cargo.toml
src/program/src/: api.rs  lib.rs  mechfs.rs  native.rs  persister.rs  program.rs  runloop.rs
src/program/tests/: program.rs
src/resolver/: Cargo.toml
src/runtime/: Cargo.toml
src/runtime/examples/: actor_context_host.rs  actor_state_host.rs  basic_runtime.rs  dep_cycle.rs  dep_diamond.rs  host_value_roundtrip.rs  matrix_multiply.rs  runtime_dep_src.rs  runtime_services_host.rs  scheduled_actor_native_functions.rs  scheduled_actor_state_host.rs  scheduled_runtime.rs  source_import_dependency.rs  transactional_runtime.rs
src/runtime/src/: actor.rs  actor_behavior.rs  browser.rs  browser_delegation.rs  browser_delegation_crypto.rs  browser_host_config.rs  capability.rs  config.rs  config_spec.rs  context.rs  event.rs  grants.rs  host.rs  host_arg.rs  host_args.rs  host_delegation.rs  host_delegation_crypto.rs  host_interface.rs  id.rs  input.rs  lib.rs  operation.rs  resource.rs  runtime.rs  scheduler.rs  service.rs  services.rs  store.rs  transaction.rs  workspace.rs
src/runtime/tests/: browser_dom.rs  config_profile.rs  generic_host.rs  layering.rs  module_smoke.rs  resource_preflight.rs
src/syntax/: Cargo.toml  PERFORMANCE_PLAN.md  README.md  grammar.md  grammar.mec  grammar.txt  mod.rs
src/syntax/benches/: interpreter.rs
src/syntax/include/: style.css  style2.css
src/syntax/src/: activation.rs  analyzer.rs  ast.rs  base.rs  compiler.rs  expressions.rs  formatter.rs  functions.rs  grammar.rs  imports.rs  interpreter.rs  lib.rs  literals.rs  matrix.rs  mechdown.rs  mika.rs  parser.rs  parser2.rs  patterns.rs  repl.rs  state_machines.rs  statements.rs  structures.rs  types.rs  value.rs
src/syntax/tests/: compiler.rs  context_parser.rs  formatter.rs  interpreter.rs  module_imports.rs  parser.rs  parser2.rs
src/utilities/: Cargo.toml
src/utilities/src/: lib.rs
src/wasm/: Cargo.toml  index.html
src/wasm/src/: analog_clock.rs  lib.rs  lib.rs.old  project.rs  repl.rs  websocket.rs
wasm-notebook/: Cargo.toml  README.md  index.html
wasm-notebook/website/: index.mec  robot-drawing.mec
(+1154 files in other folders)
