[package]
name = "mech"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Mech is a programming language for building reactive systems like robots, games, and animations."
documentation = "https://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.92"

[badges]
gitlab = { repository = "mech-lang/mech", branch = "main" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "mechc"
path = "src/bin/mechc.rs"
required-features = ["compiler"]

[profile.release]
debug = false

[features]
no_std = ["mech-core/no_std", "mech-program/no_std", "mech-syntax/no_std"]

default = ["baselib", "pretty_print", "serde", "compiler", "program", "mika",
      "u8", "u16", "u32", "u64", "u128", 
      "i8", "i16", "i32", "i64", "i128", 
      "f32", "f64", "c64", "r64",
      "statements_default", "subscript_default", "state_machines",
      "formatter", "serve", "bundle_web", "run", "test", "repl", "build", "whos", "async", "trace",
      "mech-core/default", "mech-program/default", "mech-syntax/default",
      ]
base = ["baselib", "pretty_print", "serde", "compiler", "program", "mika",
      "statements_default", "subscript_default", "state_machines",
      "formatter", "serve", "bundle_web", "run", "test", "repl", "build","whos", "async", "trace",
      "mech-core/base", "mech-program/base", "mech-syntax/base",
      ]
build = ["compiler"]
repl = []
run = ["mech-program/program"]
test = ["variable_define", "invariant_define", "symbol_table", "bool"]
cli = []
project = ["mech-runtime", "mech-runtime/default"]
web_host = ["mech-runtime", "mech-runtime/default", "mech-host-browser", "mech-host-browser/serde", "mech-host-browser/provider"]
bundle_web = ["cli", "project", "web_host", "formatter", "serde", "mech-runtime", "mech-runtime/default"]
serve = ["cli", "project", "web_host", "formatter", "mech-runtime", "mech-runtime/default", "ignore"]
host_delegation = ["serde", "mech-runtime", "mech-runtime/host_delegation", "mech-host-browser", "mech-host-browser/delegation"]
host_delegation_signing = ["host_delegation", "mech-runtime/host_delegation_signing", "mech-host-browser/delegation_signing"]
whos = ["pretty_print", "variables", "symbol_table"]
formatter = ["mech-syntax/formatter"]
async = []
trace = ["mech-program/trace"]
linked_stdlib = ["mech-program/linked_stdlib"]
linked_math = ["mech-program/linked_math"]
linked_combinatorics = ["mech-program/linked_combinatorics"]
linked_compare = ["mech-program/linked_compare"]
linked_io = ["mech-program/linked_io"]
linked_stats = ["mech-program/linked_stats"]
linked_string = ["mech-program/linked_string"]

statements_default = ["variable_assign","variable_define","invariant_define","kind_define"]
subscript_default = ["subscript_slice", "subscript_range", "logical_indexing", "swizzle", "subscript_formula", "dot_indexing"]

stdlib = ["bool", "string", 
      "u8", "u16", "u32", "u64", "u128", 
      "i8", "i16", "i32", "i64", "i128", 
      "f32", "f64", "c64", "r64", 
      "set", "map", "table", "tuple", "record", "atom", "enum",
      "matrix1", "matrix2", "matrix3", "matrix4", "matrix2x3", "matrix3x2",
      "row_vector2", "row_vector3", "row_vector4",
      "vector2", "vector3", "vector4",
      "row_vectord", "vectord", "matrixd",
      "subscript_range", "logical_indexing", "swizzle",
      "subscript_formula", "dot_indexing",
      "variable_define", "variable_assign", "kind_define",
      "kind_annotation", "variables",
      "functions", "formulas"
    ]

baselib = ["bool", "string", 
      "f64", "c64", "r64",
      "set", "map", "table", "tuple", "record", "atom", "enum",
      "row_vectord", "vectord", "matrixd",
      "subscript_range", "logical_indexing", 
      "subscript_formula",
      "variable_define", "variable_assign", 
      "kind_define",
      "kind_annotation", "variables",
      "functions", "formulas",
    ]

compiler = ["anyhow", "console", "tempfile", "zip", "mech-core/compiler", "mech-program/compiler", "mech-syntax/compiler"]
program = ["mech-core/program", "mech-program/program", "mech-syntax/program"]
pretty_print = ["mech-core/pretty_print", "mech-program/pretty_print", "mech-syntax/pretty_print"]
serde = ["mech-core/serde", "mech-program/serde", "mech-syntax/serde"]
mika = ["mech-syntax/mika", "mech-core/mika"]

statements = ["mech-core/statements", "mech-program/statements", "mech-syntax/statements"]
variables = ["variable_define", "symbol_table", "mech-core/variables", "mech-program/variables", "mech-syntax/variables"]
variable_define = ["statements", "functions", "mech-core/variable_define", "mech-program/variable_define", "mech-syntax/variable_define"]
invariant_define = ["variable_define", "mech-core/invariant_define", "mech-program/invariant_define", "mech-syntax/invariant_define"]
variable_assign = ["statements", "mech-core/variable_assign", "mech-program/variable_assign", "mech-syntax/variable_assign"]
kind_define = ["kind_annotation", "statements", "mech-core/kind_define", "mech-program/kind_define", "mech-syntax/kind_define"]
kind_annotation = ["functions", "mech-core/kind_annotation", "mech-program/kind_annotation", "mech-syntax/kind_annotation"]
formulas = ["mech-core/formulas", "mech-program/formulas", "mech-syntax/formulas"]
functions = ["symbol_table", "mech-core/functions", "mech-program/functions", "mech-syntax/functions"]
state_machines = ["functions", "mech-program/state_machines"]
symbol_table = ["mech-core/symbol_table", "mech-program/symbol_table", "mech-syntax/symbol_table"]

bool = ["mech-core/bool", "mech-program/bool", "mech-syntax/bool"]
string = ["mech-core/string", "mech-program/string", "mech-syntax/string"]

# Numbers
numbers = ["mech-core/numbers", "mech-program/numbers", "mech-syntax/numbers"]
complex = ["f64", "numbers", "mech-core/complex", "mech-program/complex", "mech-syntax/complex"]
rational = ["i64", "numbers", "mech-core/rational", "mech-program/rational", "mech-syntax/rational"]
signed_ints = ["numbers", "mech-core/signed_ints", "mech-program/signed_ints", "mech-syntax/signed_ints"]
unsigned_ints = ["numbers", "mech-core/unsigned_ints", "mech-program/unsigned_ints", "mech-syntax/unsigned_ints"]
floats = ["numbers", "mech-core/floats", "mech-program/floats", "mech-syntax/floats"]
u8 = ["unsigned_ints", "mech-core/u8", "mech-program/u8", "mech-syntax/u8"]
u16 = ["unsigned_ints", "mech-core/u16", "mech-program/u16", "mech-syntax/u16"]
u32 = ["unsigned_ints", "mech-core/u32", "mech-program/u32", "mech-syntax/u32"]
u64 = ["unsigned_ints", "mech-core/u64", "mech-program/u64", "mech-syntax/u64"]
u128 = ["unsigned_ints", "mech-core/u128", "mech-program/u128", "mech-syntax/u128"]
i8 = ["signed_ints", "mech-core/i8", "mech-program/i8", "mech-syntax/i8"]
i16 = ["signed_ints", "mech-core/i16", "mech-program/i16", "mech-syntax/i16"]
i32 = ["signed_ints", "mech-core/i32", "mech-program/i32", "mech-syntax/i32"]
i64 = ["signed_ints", "mech-core/i64", "mech-program/i64", "mech-syntax/i64"]
i128 = ["signed_ints", "mech-core/i128", "mech-program/i128", "mech-syntax/i128"]
f32 = ["floats", "mech-core/f32", "mech-program/f32", "mech-syntax/f32"]
f64 = ["floats", "mech-core/f64", "mech-program/f64", "mech-syntax/f64"]
c64 = ["complex", "mech-core/c64", "mech-program/c64", "mech-syntax/c64"]
r64 = ["rational", "mech-core/r64", "mech-program/r64", "mech-syntax/r64"]

# Structs
set = ["mech-core/set", "mech-program/set", "mech-syntax/set"]
map = ["mech-core/map", "mech-program/map", "mech-syntax/map"]
table = ["vectord", "record", "kind_annotation", "mech-core/table", "mech-program/table", "mech-syntax/table"]
tuple = ["mech-core/tuple", "mech-program/tuple", "mech-syntax/tuple"]
enum = ["mech-core/enum", "mech-program/enum", "mech-syntax/enum"]
record = ["tuple", "kind_annotation", "mech-core/record", "mech-program/record", "mech-syntax/record"]
atom = ["mech-core/atom", "mech-program/atom", "mech-syntax/atom"]

# Matrix
matrix = ["mech-core/matrix", "mech-program/matrix", "mech-syntax/matrix"]
fixed_row_vector = ["row_vector4", "row_vector3", "row_vector2", "mech-core/fixed_row_vector", "mech-program/fixed_row_vector", "mech-syntax/fixed_row_vector"]
fixed_vector = ["vector4", "vector3", "vector2", "mech-core/fixed_vector", "mech-program/fixed_vector", "mech-syntax/fixed_vector"]
fixed_matrix = ["matrix4", "matrix3", "matrix2", "matrix1", "matrix2x3", "matrix3x2", "mech-core/fixed_matrix", "mech-program/fixed_matrix", "mech-syntax/fixed_matrix"]
dynamic_matrix = ["matrixd", "vectord", "row_vectord", "mech-core/dynamic_matrix", "mech-program/dynamic_matrix", "mech-syntax/dynamic_matrix"]
row_vector4 = ["matrix", "matrix_horzcat", "mech-core/row_vector4", "mech-program/row_vector4", "mech-syntax/row_vector4"]
row_vector3 = ["matrix", "matrix_horzcat", "mech-core/row_vector3", "mech-program/row_vector3", "mech-syntax/row_vector3"]
row_vector2 = ["matrix", "matrix_horzcat", "mech-core/row_vector2", "mech-program/row_vector2", "mech-syntax/row_vector2"]
vector4 = ["matrix", "matrix_vertcat", "mech-core/vector4", "mech-program/vector4", "mech-syntax/vector4"]
vector3 = ["matrix", "matrix_vertcat", "mech-core/vector3", "mech-program/vector3", "mech-syntax/vector3"]
vector2 = ["matrix", "matrix_vertcat", "mech-core/vector2", "mech-program/vector2", "mech-syntax/vector2"]
matrix4 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix4", "mech-program/matrix4", "mech-syntax/matrix4"]
matrix3 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix3", "mech-program/matrix3", "mech-syntax/matrix3"]
matrix2 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix2", "mech-program/matrix2", "mech-syntax/matrix2"]
matrix1 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix1", "mech-program/matrix1", "mech-syntax/matrix1"]
matrix2x3 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix2x3", "mech-program/matrix2x3", "mech-syntax/matrix2x3"]
matrix3x2 = ["matrix", "matrix_horzcat", "matrix_vertcat", "mech-core/matrix3x2", "mech-program/matrix3x2", "mech-syntax/matrix3x2"]
row_vectord =["matrix", "matrix_horzcat",  "mech-core/row_vectord", "mech-program/row_vectord", "mech-syntax/row_vectord"]
vectord = ["matrix", "matrix_vertcat",  "mech-core/vectord", "mech-program/vectord", "mech-syntax/vectord"]
matrixd = ["matrix", "matrix_horzcat", "matrix_vertcat",  "mech-core/matrixd", "mech-program/matrixd", "mech-syntax/matrixd"]

# Subscripts
subscript = ["mech-core/subscript", "mech-program/subscript", "mech-syntax/subscript"]
subscript_slice = ["subscript", "vectord", "mech-core/subscript_slice", "mech-program/subscript_slice", "mech-syntax/subscript_slice"]
subscript_range = ["subscript_slice","vectord", "mech-core/subscript_range", "mech-program/subscript_range", "mech-syntax/subscript_range"]
subscript_formula = ["subscript_slice","formulas", "mech-core/subscript_formula", "mech-program/subscript_formula", "mech-syntax/subscript_formula"]
logical_indexing = ["subscript","vectord","bool", "mech-core/logical_indexing", "mech-program/logical_indexing", "mech-syntax/logical_indexing"]
dot_indexing = ["subscript", "mech-core/dot_indexing", "mech-program/dot_indexing", "mech-syntax/dot_indexing"]
swizzle = ["subscript", "mech-core/swizzle", "mech-program/swizzle", "mech-syntax/swizzle"]

# Horzcat and Vertcat

matrix_horzcat = ["matrix"]
matrix_vertcat = ["matrix"]

[dev-dependencies]
nalgebra = "0.34.1"

[dependencies]
mech-core        = { version = "0.3.5", default-features = false }
mech-syntax      = { version = "0.3.5", default-features = false }
mech-program = { version = "0.3.5", default-features = false }
mech-runtime = { version = "0.3.5", default-features = false, optional = true }
mech-host-browser = { version = "0.3.5", default-features = false, optional = true }
ignore = { version = "0.4.24", optional = true }

sevenz-rust = "0.6.1"
colored = "3.1.1"
serde = "1.0.228"
serde_derive = "1.0.228"
crossterm = "0.29.0"
tabled = "0.20.0"
crossbeam-channel = "0.5.15"
serde_json = "1.0.149"
nom = "7.1.3"
ctrlc = "3.5.2"
csv = "1.4.0"
chrono = "0.4.44"
base64 = "0.22.1"
rand = "0.9.2"
notify = "8.2.0"
ariadne = "0.6.0"
clap = { version = "4.5.60", features = ["cargo"]}
bincode = { version = "2.0.1", features = ["serde"]}
indexmap = { version = "2.13.0", features = ["serde"]}
reqwest = { version = "0.13.2", features = ["blocking"]}
warp = { version = "0.3.7", features = ["compression"]}
tokio = { version = "1.50.0", features = ["full"]}
include_dir = {version = "0.7.4", features = ["glob"]}
indicatif = { version = "0.18.4"}

anyhow = { version = "1.0.102", optional = true }
console = { version = "0.16.2", optional = true }
tempfile = { version = "3.26.0", optional = true }
zip = { version =  "5.1.1", optional = true }

[workspace]
members = [
  "src/core",
  "src/syntax",
  "src/interpreter",
  "src/program",
  "src/runtime",
  "src/wasm",
  "hosts/browser",
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "MECH.EXE"
LegalCopyright = "Copyright © 2026"

[patch.crates-io]
mech-core = { path = 'src/core' }
mech-syntax = { path = 'src/syntax'}
mech-interpreter = { path = 'src/interpreter'}
mech-program = { path = 'src/program'}
mech-runtime = { path = 'src/runtime'}
mech-wasm = { path = 'src/wasm'}
mech-host-browser = { path = 'hosts/browser'}
#mech-utilities = { path = 'src/utilities' }
mech-combinatorics = { path = 'machines/combinatorics' }
mech-compare = { path = 'machines/compare' }
mech-matrix = { path = 'machines/matrix' }
mech-stats = { path = 'machines/stats' }
mech-math = { path = 'machines/math' }
mech-io = { path = 'machines/io' }
mech-range = { path = 'machines/range' }
mech-logic = { path = 'machines/logic' }
mech-set = { path = 'machines/set' }
mech-string = { path = 'machines/string' }

[patch.'https://gitlab.com/mech-lang/core']
mech-core = { path = 'src/core', version = '0.3.5' }

[patch.'https://gitlab.com/mech-lang/syntax']
mech-syntax = { path = 'src/syntax', version = '0.3.5' }

[patch.'https://gitlab.com/mech-lang/interpreter']
mech-interpreter = { path = 'src/interpreter', version = '0.3.5' }

[patch.'https://gitlab.com/mech-lang/program']
mech-program = { path = 'src/program', version = '0.3.5' }

#[patch.'https://gitlab.com/mech-lang/wasm']
#mech-wasm = { path = 'src/wasm', version = '0.2.44' }

#[patch.'https://gitlab.com/mech-lang/utilities']
#mech-utilities = { path = 'src/utilities', version = '0.2.44' }
