[package]
name = "mech-notebook"
version = "0.0.4"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "A notebook for writing mech applications"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mech-wasm = {git = "https://gitlab.com/mech-lang/wasm"}

hashbrown = "0.11.0"
wasm-bindgen = "0.2.70"
serde = {version = "1.0.123", default-features = false, features = ["alloc"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[dependencies.web-sys]
version = "0.3.47"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'KeyboardEvent',
  'TouchEvent',
  'Event',
  'EventTarget',
  'CanvasRenderingContext2d',
  'Node',
  'Window',
  'Selection',
  'Range',
  'HtmlCollection',
  'WebSocket',
  'MessageEvent',
  'console',
  'XmlHttpRequest',
  'FileList',
  'File'
]
