[package]
name = "mech-notebook"
version = "0.2.48"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Gui notebook interface for the Mech programming language."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/notebook"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.84"

[dependencies]
mech = "0.2.48"
egui = "0.31.1"
eframe = "0.31.1"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "MECH.EXE"
LegalCopyright = "Copyright © 2025" 