[package]
name = "mech-wasm-notebook"
version = "0.1.0"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "A notebook writing Mech in the browser"
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mech-wasm = {path = "../src/wasm"}

wasm-bindgen = "0.2.87"
